# Chess

./: CMakeLists.txt  README.md
Header/: Bishop.h  Cell.h  ChessModel.h  ChessView.h  GameUtility.h  IPiece.h  King.h  Knight.h  Pawn.h  Queen.h  Rook.h
Source/: Bishop.cpp  Cell.cpp  ChessModel.cpp  ChessView.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp  main.cpp
data/: res.xml
